--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-api": "cd ddx && venv/bin/flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-api": "cd api && flask test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"http://localhost:5000"
 }
